# stud

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/plan/: a-share-analysis-prediction.md  signal-engine-phase-a.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  router.js
frontend/src/api/: index.js
frontend/src/views/: BacktestView.vue  DragonTigerView.vue  EmotionView.vue  JournalView.vue  LimitUpView.vue  RecapView.vue  SignalView.vue  ThemeView.vue
seed/: known_players.json
src/api/: deps.py  main.py
src/api/routes/: backtest.py  dragon_tiger.py  emotion.py  export.py  journal.py  limit_up.py  players.py  recap.py  signal.py  theme.py  watchlist.py
src/config/: settings.py
src/data/: backfill.py  collector.py  database.py  loader.py  models.py  models_backtest.py  models_journal.py  models_signal.py  repo_backtest.py  repo_forecast.py  repo_journal.py  repo_signal.py  repository.py
src/engine/: ai_client.py  ai_prompts.py  backtest.py  dragon_tiger.py  emotion.py  forecast.py  forecast_backtest.py  limit_up.py  recap.py  signal.py  theme.py
src/scheduler/: jobs.py
tests/: conftest.py  test_api.py  test_engine_backtest.py  test_engine_emotion.py  test_engine_limit_up.py  test_engine_signal.py  test_engine_theme.py  test_repository.py
